--- a/README
+++ b/README
@@ -1,10 +1,17 @@
 This is my Sandbox for learning Python and playing in the Python Shell.
 
-There is a script to start Python with tab completion, and basic modules
-loaded.
+There is a script to start Python with readline tab completion, and
+basic modules loaded.
+
+    ./python-sandbox                # Start Python and handy module
+    ./python-sandbox --none         # Start up with no extras
+    ./python-sandbox --no-yaml      # Start up with all except yaml
+    ./python-sandbox --none --yaml  # Start up with nothing except yaml
 
 When I have something to prove about the behavior of Python, I code it as a
 test in tests/.
+
+    make tests          # Run all the tests
 
 Links:
 
